# The 'program' subdirectory contains the main simpact program
add_subdirectory(program)
add_subdirectory(program-maxart)
add_subdirectory(program-HSV2)

# Some tests
add_subdirectory(tests/test1)
add_subdirectory(tests/test_mort)
add_subdirectory(tests/global)
add_subdirectory(tests/config)
add_subdirectory(tests/varia)
